# FFmpegTest-Android

./: README.md  local.properties
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/github/ffmpegtest/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/java/com/github/ffmpegtest/: MainActivity.java
app/src/test/java/com/github/ffmpegtest/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
